--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   </div>
                   <div>
                      <div class="list"><span>age</span><span>:</span><span>29</span></div>
-                     <div class="list"><span>work</span><span>:</span><span>qa-engineer</span></div>
+                     <div class="list"><span>work</span><span>:</span><span>QA</span></div>
                      <div class="list"><span>Power</span><span>:</span><span>Postman</span></div>
                      <div class="list"><span>location</span><span>:</span><span>Sterlitamak</span></div>
 
